resources/assets/sass/admin/admin.scss
.navbar .nav > li > a {
  line-height: 29px;
}
table.datatable {
  tr td {
    max-width:175px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  thead th {
    padding-right: 18px;
    &.select {
      padding-top: 2rem;
      padding-bottom: 2rem;
    }
    input {
      min-width: 40px
    }
  }
  tfoot.search {
    display: table-header-group;
  }
}
.datatable_wrapper, .panel-body {
  overflow: hidden;
}
body.tray-rescale .tray-center {
  padding-right: 0 !important;
}

.datepicker {
  padding: 0;
}

.hasDatepicker {
  cursor: pointer !important;
}
.footnote {
  margin-left: 2rem;
  margin-top: 0.5rem;
}

#birthday {
  cursor: pointer !important;
}

div#files-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  padding: 1rem;
  padding-bottom: 0;
  .file-item {
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    width: 24.6%;
    height: 29rem;
    border: 1px solid #ddd;
    padding: 0.5rem;
    margin-bottom: 1rem;
    position:  relative;
    &.gap {
      border: none;
      padding: 0;
      height: 0;
      margin: 0;
    }
    > a {
      display: block;
      height: 100%;
    }
  }
  .file-name {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    text-align: center;
    font-size: 1.5rem;
    margin-top: 0.5rem;
  }
  .file-preview {
    width: 100%;
    height: 90%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  .doc .file-preview {
    background-size: 55%;
  }
  .file-delete {
    position:  absolute;
    bottom: 0.3rem;
    right: 0.3rem;
    background:  #fff;
    padding: 0.4rem 1rem;
    cursor: pointer;
    color: red;
  }
  .upload {
    cursor:  pointer;
    transition: ease 0.3s;
    &:hover {
      background: #eee;
    }
    .icon {
      display: flex;
      justify-content: center;
      align-items: flex-end;
      height: 50%;
      font-size: 8rem;
      i.fa.fa-plus {
        font-size: 6rem;
        margin-right: 3rem;
      }
    }
    .title {
      display: flex;
      justify-content: center;
      align-items: flex-start;
      height: 38%;
      font-size: 2rem;
      text-align: center;
    }
  }
}
@media screen and (max-width: 1000px) {
  div#files-container .file-item {
    width: 32.2%;
  }
}
@media screen and (max-width: 600px) {
  div#files-container .file-item {
    width: 49%;
  }
}
@media screen and (max-width: 400px) {
  div#files-container {
    justify-content: center;
    .file-item {
      width: 90%;
    }
  }
}


.select-gen .selectize-input, .select .selectize-input {
  border: 1px solid #dddddd;
  border-radius: 0;
  box-shadow: none;
  padding: 9px 12px;
  font-size: 13px;
  line-height: 1.49;
  color: #555555;
}

a.delete {
  cursor:pointer;
}

p.form-control.custom-field {
  height: auto;
  min-height: 39px;
  margin: 0;
}

.topbar-left > span {
  color: #555;
  font-size: 18px;
}

input.custom-file-input {
  display: none !important;
}

